{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 7,
  "lineage": "6ae0f2f0-7a16-ac4d-51d1-08483cb8a5a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:296285391348:instance/i-052b19ce29027457f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052b19ce29027457f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aug25-batch",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0505522f57539a18c"
              }
            ],
            "primary_network_interface_id": "eni-0505522f57539a18c",
            "private_dns": "ip-172-31-70-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.70.162",
            "public_dns": "ec2-3-234-210-72.compute-1.amazonaws.com",
            "public_ip": "3.234.210.72",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07834f0e011413c73",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "test security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f181a5fe",
            "tags": {
              "Name": "controller"
            },
            "tags_all": {
              "Name": "controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea97030dab337d35"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296285391348",
            "id": "i-052b19ce29027457f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "target1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:296285391348:instance/i-01f8b39092f203fe3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f8b39092f203fe3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aug25-batch",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08122bd5507309167"
              }
            ],
            "primary_network_interface_id": "eni-08122bd5507309167",
            "private_dns": "ip-172-31-76-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.76.72",
            "public_dns": "ec2-44-200-93-84.compute-1.amazonaws.com",
            "public_ip": "44.200.93.84",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-035ed0409de0d3f3e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "test security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f181a5fe",
            "tags": {
              "Name": "target1"
            },
            "tags_all": {
              "Name": "target1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea97030dab337d35"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296285391348",
            "id": "i-01f8b39092f203fe3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "target2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:296285391348:instance/i-02a6479a4cbf11dc0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a6479a4cbf11dc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aug25-batch",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d85d697c104ef24f"
              }
            ],
            "primary_network_interface_id": "eni-0d85d697c104ef24f",
            "private_dns": "ip-172-31-71-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.71.4",
            "public_dns": "ec2-98-81-19-126.compute-1.amazonaws.com",
            "public_ip": "98.81.19.126",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a983710c0e9cdd54",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "test security group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f181a5fe",
            "tags": {
              "Name": "target2"
            },
            "tags_all": {
              "Name": "target2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea97030dab337d35"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296285391348",
            "id": "i-02a6479a4cbf11dc0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296285391348:security-group/sg-0ea97030dab337d35",
            "description": "used to test the ssh",
            "egress": [],
            "id": "sg-0ea97030dab337d35",
            "ingress": [],
            "name": "test security group",
            "name_prefix": "",
            "owner_id": "296285391348",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test security group"
            },
            "tags_all": {
              "Name": "test security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-e658e69c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296285391348",
            "id": "sg-0ea97030dab337d35",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296285391348:security-group-rule/sgr-07254ae2a0be1eb9a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07254ae2a0be1eb9a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ea97030dab337d35",
            "security_group_rule_id": "sgr-07254ae2a0be1eb9a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296285391348",
            "id": "sgr-07254ae2a0be1eb9a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296285391348:security-group-rule/sgr-064facea9ed43a366",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-064facea9ed43a366",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ea97030dab337d35",
            "security_group_rule_id": "sgr-064facea9ed43a366",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296285391348",
            "id": "sgr-064facea9ed43a366",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_test"
          ]
        }
      ]
    }
  ]
}